--- a/index.html
+++ b/index.html
@@ -55,16 +55,20 @@
             </div>
         </div>
 
+        <div>
+            Software developer with extensive experience in creating robust Android applications. A Ukrainian national with permission to live and work in UK until (oct 2025).
+        </div>
+
         <main>
             <h1>Experience</h1>
             <div>
-                <h3>Android developer at EasternPeak</h3>
+                <h3>Android developer at EasternPeak <small>(Ukrainian outsourcing company under NDA)</small></h3>
                 <div>nov 2020 - nov 2022</div>
                 <ul>
                     <li>
                         <!-- Sauce -->
                         <p>
-                            An NDA kitchen-side app for a direct online ordering platform and delivery network
+                            A kitchen-side app for a direct online ordering platform and delivery network
                             that significantly boosts margins for the US based restaurants.
                         </p>
                         <p>
@@ -81,13 +85,13 @@
                     <li>
                         <!-- Ryde -->
                         <p>
-                            A crossplatform Flutter NDA app used by big companies to make their employees commute easy.
-                            It provides shuttle taxi service tied to employees shifts start and end time.
+                            A crossplatform Flutter app used by large companies to simplify their employees' commute.
+                            It provides shuttle taxi service tied to employee shifts start and end times.
                         </p>
                         <p>
                             Responsibilities:
                             Development and support of Flutter crossplatform app from scratch.
-                            Created a Hebrew translation and fixed RTL issues in opensource lib.
+                            Created a Hebrew translation and fixed "Right To Left" issues in an opensource library.
                         </p>
                         <p>
                             Stack:
@@ -97,9 +101,9 @@
                     <li>
                         <!-- Classi -->
                         <p>
-                            Android TV NDA App.
-                            The startup provides a possibility to school students to have not expensive home setup for
-                            remote education.
+                            Android TV app.
+                            The startup provides an inexpensive remote education home setup for
+                            school students.
                         </p>
                         <p>
                             Responsibilities:
@@ -116,18 +120,18 @@
 
             </div>
             <div>
-                <h3>Android developer at RiseApps</h3>
+                <h3>Android developer at RiseApps <small>(ukrainian outsourcing company under NDA)</small></h3>
                 <div>apr 2020 - nov 2020</div>
                 <ul>
                     <li>
                         <!-- BleLocking -->
                         <p>
-                            NDA Android app, which is allows guest to open rental apartment bletooth locks.
+                            Android app, which allows guests to open rental apartment using a bluetooth enabled mobile phone.
                         </p>
                         <p>
                             Responsibilities:
                             Development and support of Android app.
-                            Found and fixed zero initialization vector security issue before it becomes a problem.
+                            Found and fixed zero initialization vector security issue before it became a problem.
                         </p>
                         <p>
                             Stack:
@@ -137,15 +141,15 @@
                     <li>
                         <!-- Gym app -->
                         <p>
-                            NDA App for the gym network.
-                            The tablet with app was connected to the training apparatus and it was showing the exercise
+                            App for the client's gym network.
+                            The tablet was connected to the training apparatus to show the exercise
                             speed and optimal
                             speed range.
                         </p>
                         <p>
                             Responsibilities:
                             Development of Android app.
-                            Achieved 60 FPS ui rendering on native android.
+                            Achieved 60 FPS flicker free UI rendering on native android.
                         </p>
                         <p>
                             Stack:
@@ -160,14 +164,15 @@
                 <ul>
                     <li>
                         <p>
-                            MetraNet - is a charging solution primarily developed to monetize any product or service,
-                            including IoT
-                            services.
+                            MetraNet - is a 20 year old billing system for services in the hotels and other businesses.
                         </p>
                         <p>
                             Responsibilities:
                             In order to port the app to Microsoft Azure there was a need to avoid using MSDTC.
                             I was a part of team solving this problem.
+                        </p>
+                        <p>
+                            Android was not involved
                         </p>
                         <p>
                             Stack:
@@ -192,7 +197,7 @@
                     <li>
                         <!-- PSA -->
                         <p>
-                            PSA - An MVP of a framework of UI elements for building client bank application.
+                            PSA - An MVP of a framework of UI elements for building applications for bank customers.
                         </p>
                         <p>
                             Responsibilities:
