tech stack fixes

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
             font-family: 'Poppins';
             font-size: 18px;
         }
+
+        .brief {
+            font-size: 21px;
+        }
+
         a, a:hover, a:visited {
             color: #4486ee;
         }
@@ -49,17 +54,16 @@
             </div>
 
             <div class="right">
-                <a
-                    href="https://www.linkedin.com/in/bohdan-savrasov-a7a8b554">https://www.linkedin.com/in/bohdan-savrasov-a7a8b554</a>
+                <a href="https://www.linkedin.com/in/bohdan-savrasov-a7a8b554">https://www.linkedin.com/in/bohdan-savrasov-a7a8b554</a>
                 <div>Kotlin, Java, Dart</div>
             </div>
         </div>
 
-        <div>
-            Software developer with extensive experience in creating robust Android applications. A Ukrainian national with permission to live and work in UK until (oct 2025).
-        </div>
-
         <main>
+            <p class="brief">
+                Software developer with extensive experience in creating robust Android applications. A Ukrainian national with permission to live and work in UK until july 2025.
+            </p>
+
             <h1>Experience</h1>
             <div>
                 <h3>Android developer at EasternPeak <small>(Ukrainian outsourcing company under NDA)</small></h3>
@@ -79,7 +83,7 @@
                         </p>
                         <p>
                             Stack:
-                            Android SDK, Kotlin, Jetpack Compose, Retrofit, StarPrint SDK, Git, Figma, Jira
+                            Android SDK, Kotlin, Jetpack Compose, Coroutines, Hilt, Retrofit2, LiveData, ViewModel, StarPrint SDK, Git, Figma, Jira
                         </p>
                     </li>
                     <li>
@@ -95,7 +99,7 @@
                         </p>
                         <p>
                             Stack:
-                            Flutter SDK, Dart, Git, Figma, Jira
+                            Flutter SDK, Dart, Google Maps SDK, Firebase SDK, Git, Figma, Jira
                         </p>
                     </li>
                     <li>
@@ -113,14 +117,14 @@
                         </p>
                         <p>
                             Stack:
-                            Android SDK, Kotlin, Zoom SDK, Chromium, Git, Figma, Jira
+                            Android SDK, Kotlin, Dagger2, Retrofit2, Coroutines, Jetpack Navigation, Zoom SDK, Chromium, Git, Figma, Jira
                         </p>
                     </li>
                 </ul>
 
             </div>
             <div>
-                <h3>Android developer at RiseApps <small>(ukrainian outsourcing company under NDA)</small></h3>
+                <h3>Android developer at RiseApps <small>(Ukrainian outsourcing company under NDA)</small></h3>
                 <div>apr 2020 - nov 2020</div>
                 <ul>
                     <li>
@@ -135,7 +139,7 @@
                         </p>
                         <p>
                             Stack:
-                            Android SDK, Java, Git, Figma, Jira
+                            Android SDK, Java, Kotlin, Dagger2, Git, Figma, Jira
                         </p>
                     </li>
                     <li>
@@ -153,7 +157,7 @@
                         </p>
                         <p>
                             Stack:
-                            Android SDK, Java, Git, Figma, Jira
+                            Android SDK, Java, Dagger2, RxJava2, USB, Git, Figma, Jira
                         </p>
                     </li>
                 </ul>
@@ -171,9 +175,7 @@
                             In order to port the app to Microsoft Azure there was a need to avoid using MSDTC.
                             I was a part of team solving this problem.
                         </p>
-                        <p>
-                            Android was not involved
-                        </p>
+                        <small> Not Android related project </small>
                         <p>
                             Stack:
                             .NET, C#, ASP.NET, C++, VB, Git
@@ -191,7 +193,7 @@
                         </p>
                         <p>
                             Stack:
-                            Android SDK, Java, Ehereum, JavaScript, Solidity, Git
+                            Android SDK, Java, RxJava2, Ethereum, JavaScript, Solidity, Git
                         </p>
                     </li>
                     <li>
